--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,47 +1,23 @@
 /* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-
-table, th , td {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 5px;
-}
-table tr:nth-child(odd) {
-  background-color: #f1f1f1;
-}
-table tr:nth-child(even) {
-  background-color: #ffffff;
-}
 
 /* prime faces components */
 .ui-layout-pane {
     border: 0;
+}
+
+.hit-header {
+    color: #ffffff;
+    background-color: #18453B;
+    padding: 5px 5px 5px 5px;
+    font-size: 1.5em;
+    margin: 0px 0px 0px 0px;
+}
+
+.hit-footer {
+    color: #ffffff;
+    background-color: #18453B;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    font-size: 0.75em;
 }
